; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/l2cap/extr_l2c_ble.c_l2cble_notify_le_connection.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/l2cap/extr_l2c_ble.c_l2cble_notify_le_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_14__ = type { %struct.TYPE_10__ }
%struct.TYPE_10__ = type { %struct.TYPE_12__ }
%struct.TYPE_12__ = type { i32, i32 }
%struct.TYPE_11__ = type { i64 }
%struct.TYPE_13__ = type { i64 }

@BT_TRANSPORT_LE = common dso_local global i32 0, align 4
@LST_CONNECTED = common dso_local global i64 0, align 8
@HCI_ROLE_SLAVE = common dso_local global i64 0, align 8
@btm_cb = common dso_local global %struct.TYPE_14__ zeroinitializer, align 4
@BTM_BLE_ADV_DISABLE = common dso_local global i32 0, align 4
@BTM_BLE_STOP_ADV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @l2cble_notify_le_connection(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca %struct.TYPE_13__*, align 8
  %5 = alloca %struct.TYPE_12__*, align 8
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @BT_TRANSPORT_LE, align 4
  %8 = call %struct.TYPE_11__* @l2cu_find_lcb_by_bd_addr(i32 %6, i32 %7)
  store %struct.TYPE_11__* %8, %struct.TYPE_11__** %3, align 8
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @BT_TRANSPORT_LE, align 4
  %11 = call %struct.TYPE_13__* @btm_bda_to_acl(i32 %9, i32 %10)
  store %struct.TYPE_13__* %11, %struct.TYPE_13__** %4, align 8
  %12 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %13 = icmp ne %struct.TYPE_11__* %12, null
  br i1 %13, label %14, label %48

14:                                               ; preds = %1
  %15 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %16 = icmp ne %struct.TYPE_13__* %15, null
  br i1 %16, label %17, label %48

17:                                               ; preds = %14
  %18 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @LST_CONNECTED, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %23, label %48

23:                                               ; preds = %17
  %24 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @HCI_ROLE_SLAVE, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %40

29:                                               ; preds = %23
  store %struct.TYPE_12__* getelementptr inbounds (%struct.TYPE_14__, %struct.TYPE_14__* @btm_cb, i32 0, i32 0, i32 0), %struct.TYPE_12__** %5, align 8
  %30 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %31 = icmp ne %struct.TYPE_12__* %30, null
  br i1 %31, label %32, label %39

32:                                               ; preds = %29
  %33 = load i32, i32* @BTM_BLE_ADV_DISABLE, align 4
  %34 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %35 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %34, i32 0, i32 1
  store i32 %33, i32* %35, align 4
  %36 = load i32, i32* @BTM_BLE_STOP_ADV, align 4
  %37 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %38 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %37, i32 0, i32 0
  store i32 %36, i32* %38, align 4
  br label %39

39:                                               ; preds = %32, %29
  br label %40

40:                                               ; preds = %39, %23
  %41 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %42 = call i32 @btm_establish_continue(%struct.TYPE_13__* %41)
  %43 = load i64, i64* @LST_CONNECTED, align 8
  %44 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %45 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %44, i32 0, i32 0
  store i64 %43, i64* %45, align 8
  %46 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %47 = call i32 @l2cu_process_fixed_chnl_resp(%struct.TYPE_11__* %46)
  br label %48

48:                                               ; preds = %40, %17, %14, %1
  ret void
}

declare dso_local %struct.TYPE_11__* @l2cu_find_lcb_by_bd_addr(i32, i32) #1

declare dso_local %struct.TYPE_13__* @btm_bda_to_acl(i32, i32) #1

declare dso_local i32 @btm_establish_continue(%struct.TYPE_13__*) #1

declare dso_local i32 @l2cu_process_fixed_chnl_resp(%struct.TYPE_11__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
